# Fine-Tuning-LLM-with-Optimized-DPO

./: .flake8  .gitignore  .gitmodules  DPO_training.py  LICENSE  README.md  README_DISTRIBUTED.md  Training.py  check_gpu.py  config.py  dpoLoss.py  dpoTraining.py  dpo_loss.py  main.py  physics_QA.json  physics_qa_content.json  physics_qa_mixed.json  physics_qa_structure.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_distributed.sh  setup.sh  setup_trainer.sh  testing.py  trainer.py  trainer_requirements.txt  upload.py  utility.py
Gemini2.5flash_Evaluation/: acc_rate.py  overall_eval_sum_Llama-3.1-8B-Instruct_DPOPSHIFT_content_generated_output_lr3.0e-06_b0.30_dp50.0_shift0.75.json  overall_eval_sum_Llama-3.1-8B-Instruct_DPOPSHIFT_html_generated_output_lr1.0e-06_b0.30_dp50.0_shift0.75.json  overall_eval_sum_Llama-3.1-8B-Instruct_DPOPSHIFT_structure_generated_output_lr1.0e-06_b0.30_dp50.0_shift0.75.json  overall_eval_sum_Llama-3.1-8B-Instruct_DPOP_content_generated_output_lr3.0e-06_b0.10_dp50.0.json  overall_eval_sum_Llama-3.1-8B-Instruct_DPOP_content_generated_output_lr3.0e-06_b0.30_dp50.0.json  overall_eval_sum_Llama-3.1-8B-Instruct_DPOP_html_generated_output_lr3.0e-06_b0.30_dp50.0.json  overall_eval_sum_Llama-3.1-8B-Instruct_DPOP_structure_generated_output_lr5.0e-07_b0.30_dp50.0.json  overall_eval_sum_Llama-3.1-8B-Instruct_DPOSHIFT_content_generated_output_lr3.0e-06_b0.30_shift0.75.json  overall_eval_sum_Llama-3.1-8B-Instruct_DPOSHIFT_content_generated_output_lr3.0e-06_b0.30_shift0.85.json  t.py  (+9 more)
data/: physics_qa_content.json
distance/: summary.csv  (+3 more)
(+338 files in other folders)
