[project]
name = "fine-tuning-llm-with-dpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.27.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.40.0",
]
